syntax = "proto3";

package scheduler.agent;

message RegisterAgentRequest {
    Health health = 1;
    Hostname hostname = 2;
}

message RegisterAgentResponse {
    uint32 id = 1;
}

message Hostname {
    string host = 1;
    uint32 port = 2;
}

message Health {
    uint32 cpu_avail = 1;
    uint32 memory_avail = 2;
}

message HealthStatus {
    uint32 agent_id = 1;
    Health health = 2;
}

message Empty {}

service Agent {
    rpc RegisterAgent (RegisterAgentRequest) returns (RegisterAgentResponse);
    rpc ReportHealthStatus (stream HealthStatus) returns (Empty);
}